tests/build/cases/ui_node/delegate_list_expr_error_incorrect_type_children.stderr
error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:11
  |
9 | #[ui_node(children)]
  | ----------^^^^^^^^--
  | |         |
  | |         the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `ui_node_list_default::info_all`
 --> $WORKSPACE/zero-ui-app/src/widget/instance.rs
  |
  |     pub fn info_all(list: &mut impl UiNodeList, info: &mut WidgetInfoBuilder) {
  |                                     ^^^^^^^^^^ required by this bound in `info_all`

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:11
  |
9 | #[ui_node(children)]
  | ----------^^^^^^^^--
  | |         |
  | |         the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `ui_node_list_default::init_all`
 --> $WORKSPACE/zero-ui-app/src/widget/instance.rs
  |
  |     pub fn init_all(list: &mut impl UiNodeList) {
  |                                     ^^^^^^^^^^ required by this bound in `init_all`

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:11
  |
9 | #[ui_node(children)]
  | ----------^^^^^^^^--
  | |         |
  | |         the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `ui_node_list_default::deinit_all`
 --> $WORKSPACE/zero-ui-app/src/widget/instance.rs
  |
  |     pub fn deinit_all(list: &mut impl UiNodeList) {
  |                                       ^^^^^^^^^^ required by this bound in `deinit_all`

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:11
  |
9 | #[ui_node(children)]
  | ----------^^^^^^^^--
  | |         |
  | |         the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `ui_node_list_default::update_all`
 --> $WORKSPACE/zero-ui-app/src/widget/instance.rs
  |
  |     pub fn update_all(list: &mut impl UiNodeList, updates: &WidgetUpdates) {
  |                                       ^^^^^^^^^^ required by this bound in `update_all`

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:11
  |
9 | #[ui_node(children)]
  | ----------^^^^^^^^--
  | |         |
  | |         the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `ui_node_list_default::event_all`
 --> $WORKSPACE/zero-ui-app/src/widget/instance.rs
  |
  |     pub fn event_all(list: &mut impl UiNodeList, update: &EventUpdate) {
  |                                      ^^^^^^^^^^ required by this bound in `event_all`

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:11
  |
9 | #[ui_node(children)]
  | ----------^^^^^^^^--
  | |         |
  | |         the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `measure_all`
 --> $WORKSPACE/zero-ui-app/src/widget/instance.rs
  |
  |     pub fn measure_all(list: &mut impl UiNodeList, wm: &mut WidgetMeasure) -> PxSize {
  |                                        ^^^^^^^^^^ required by this bound in `measure_all`

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:11
  |
9 | #[ui_node(children)]
  | ----------^^^^^^^^--
  | |         |
  | |         the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `layout_all`
 --> $WORKSPACE/zero-ui-app/src/widget/instance.rs
  |
  |     pub fn layout_all(list: &mut impl UiNodeList, wl: &mut WidgetLayout) -> PxSize {
  |                                       ^^^^^^^^^^ required by this bound in `layout_all`

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:11
  |
9 | #[ui_node(children)]
  | ----------^^^^^^^^--
  | |         |
  | |         the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `ui_node_list_default::render_all`
 --> $WORKSPACE/zero-ui-app/src/widget/instance.rs
  |
  |     pub fn render_all(list: &mut impl UiNodeList, frame: &mut FrameBuilder) {
  |                                       ^^^^^^^^^^ required by this bound in `render_all`

error[E0277]: the trait bound `NotANodeList: zero_ui::prelude::UiNodeList` is not satisfied
 --> cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs:9:11
  |
9 | #[ui_node(children)]
  | ----------^^^^^^^^--
  | |         |
  | |         the trait `zero_ui::prelude::UiNodeList` is not implemented for `NotANodeList`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNodeList`:
            <implementers-list>
note: required by a bound in `ui_node_list_default::render_update_all`
 --> $WORKSPACE/zero-ui-app/src/widget/instance.rs
  |
  |     pub fn render_update_all(list: &mut impl UiNodeList, update: &mut FrameUpdate) {
  |                                              ^^^^^^^^^^ required by this bound in `render_update_all`
