tests/build/cases/ui_node/delegate_list_expr_error_incorrect_type_children.rs
use zero_ui::wgt_prelude::{ui_node, UiNode};

struct NotANodeList;

struct MyNode {
    children: NotANodeList,
}

#[ui_node(children)]
impl UiNode for MyNode {}

fn main() {}
